workshop03/bggapp-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
    name: bggns
    labels: 
        createdby: ho
        group: en
