workshop03/bggapp-v1-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: bggapp-v1-deployment
    labels:
        name: bggapp-v1-deployment
spec:
    replicas: 3
    selector: 
        matchLabels: 
            name: bggapp-v1-pod
            #version: v1
    strategy:
      type: RollingUpdate
      rollingUpdate:
         maxSurge: 25%
         maxUnavailable: 25%
    template:
        metadata:
            name: bggapp-v1-pod
            labels: 
                name: bggapp-v1-pod
                #version: v1
        spec:
            containers:
            - name: bggapp-v1-container
              resources:
                requests:
                    cpu: 100m
                    memory: 128Mi
              image: stackupiss/bgg-backend:v1
              imagePullPolicy: IfNotPresent
              args:
              - --prefix
              - /v1
              ports: 
              - name: bggapp-port
                containerPort: 3000
              livenessProbe:
                 httpGet:
                    path: /v1/healthz
                    port: 3000
                 failureThreshold: 3
                 periodSeconds: 30
              #env:
              #-  name: BGG_DB_USER
              #   value: root
              #-  name: BGG_DB_HOST
              #   value: bggdb-svc.bggns
