workshop03/bggapp-v2-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: bggapp-v2-svc
    labels:
        name: bggapp-v2-svc

spec:
    type: ClusterIP
    selector: 
        name: bggapp-v2-pod
        #version: v1
    ports:
    - name: bggapp-svc-port
      #port: 8080  
      port: 80
      #port: 3306
      targetPort: bggapp-port
